<resources>
    <string name="app_name">Marvel Muzei Extension</string>
    <string name="source_name">Marvel</string>
    <string name="source_description">Photos from Marvel</string>
    <string-array name="character_names">
        <item>Adam Warlock</item>
        <item>Alpha Flight</item>
        <item>The Avengers</item>
        <item>Black Panther</item>
        <item>Black Widow</item>
        <item>Cable</item>
        <item>Captain America</item>
        <item>Captain Marvel</item>
        <item>Daredevil</item>
        <item>Dazzler</item>
        <item>Deadpool</item>
        <item>Defenders</item>
        <item>Doctor Strange</item>
        <item>Dracula</item>
        <item>Fantastic Four</item>
        <item>Ghost Rider</item>
        <item>Guardians of the Galaxy</item>
        <item>Hawkeye</item>
        <item>Howard the Duck</item>
        <item>Hulk</item>
        <item>Iron Fist</item>
        <item>Iron Man</item>
        <item>Jessica Jones</item>
        <item>Moon Knight</item>
        <item>New Mutants</item>
        <item>Nick Fury</item>
        <item>Nova</item>
        <item>Punisher</item>
        <item>She-Hulk</item>
        <item>Silver Surfer</item>
        <item>Spider-Man</item>
        <item>Sub-Mariner</item>
        <item>Thor</item>
        <item>Thunderbolts</item>
        <item>Werewolf by Night</item>
        <item>Wolverine</item>
        <item>X-Men</item>
    </string-array>
    <string-array name="character_values">
        <item>2091,3654,6686</item>
        <item>2116</item>
        <item>354,1991,1991,1991,1991,1991,1991,1991,1991,1991,3621,16452,9085,9086,1866,18309,16451,3631,3623,3623,3630,3632,2111</item>
        <item>11665,3627,1993,2115</item>
        <item>18138,9706</item>
        <item>4002,16907,6668,1995,1995</item>
        <item>485,1997,16516,6478,1996,1996,1996,1996,1996,1996,12105,1998,1998,3629</item>
        <item>2000</item>
        <item>18457,12916,2002,2002,2002,2002,2002,2002,2002,2902,3906,3897,449,449</item>
        <item>3745</item>
        <item>16542,5701,9045,8865,2003,2004,2005,2005</item>
        <item>17370,3743,3743,3743</item>
        <item>2985,3740,3740,3740,3741,3741</item>
        <item>2084,6672</item>
        <item>725,16557,421,421,18700,16561,13440,2121,2121,2121,2121,2121,2121,2121,2121,2012,6070,2123,2119</item>
        <item>1104,2013,2013,6255,6255</item>
        <item>16410,17754,6257,4885</item>
        <item>12105,16309,9896,685,13160</item>
        <item>4767,4766</item>
        <item>3374,18834,8842,16583,2021,2021,2021,2021,2021,2021,2021,2021,2983</item>
        <item>18539,6252,1140</item>
        <item>4889,16593,18542,835,2572,2030,2029,2029,2029,2029,2029,2029,3723,13577</item>
        <item>672,674</item>
        <item>18467,947,10639</item>
        <item>7455,2055,2055,2053,563</item>
        <item>2067,2067,6683,8854,8853,8852</item>
        <item>6679,6679,6679,6679</item>
        <item>5263,5860,2065,6681,6601,3698,698,1112,12550,18572,14019</item>
        <item>2291,18472,731,886</item>
        <item>2585,2288,2068</item>
        <item>16859,17285,454,14246,877,1987,1987,1987,1987,1987,1987,1987,1987,2984,2271,2271,2271,2271,2092,2092,2069,2069,2070,2088,2292,2060</item>
        <item>2077,2077,2989</item>
        <item>2032,2032,2032,2083,2083,2083,2083,2083,2083,2978,581,581</item>
        <item>2296,788,18527</item>
        <item>6687</item>
        <item>2096,5264,2262,2262,2262</item>
        <item>18136,16449,18142,744,2258,2258,2258,2258,2258,2258,2258,2258,2258,2258,1988,3751,3917,2098,2098,2098,2265,2265,3637,6256</item>
    </string-array>

    <string-array name="artist_names">
        <item>Art Adams</item>
        <item>Neal Adams</item>
        <item>Mike Allred</item>
        <item>Terry Austin</item>
        <item>Mark Bagley</item>
        <item>Tim Bradstreet</item>
        <item>Rich Buckler</item>
        <item>John Buscema</item>
        <item>Sal Buscema</item>
        <item>John Byrne</item>
        <item>Nick Cardy</item>
        <!--item>Frank Cirocco</item-->
        <item>Howard Chaykin</item>
        <item>Dave Cockrum</item>
        <item>Amanda Conner</item>
        <item>Alan Davis</item>
        <item>Steve Ditko</item>
        <item>Kieron Dwyer</item>
        <item>David Finch</item>
        <item>Francesco Francavilla</item>
        <item>Armando Gil</item>
        <item>Adi Granov</item>
        <item>Gene Ha</item>
        <item>Tony Harris</item>
        <item>Russ Heath</item>
        <item>Don Heck</item>
        <item>Greg Horn</item>
        <item>Adam Hughes</item>
        <item>Stuart Immonen</item>
        <item>Klaus Janson</item>
        <item>Gil Kane</item>
        <item>Jack Kirby</item>
        <item>Alan Kupperberg</item>
        <item>Greg Land</item>
        <item>Bob Layton</item>
        <item>Jae Lee</item>
        <item>Jim Lee</item>
        <item>Kevin Maguire</item>
        <item>Alex Maleev</item>
        <item>Mike Mayhew</item>
        <item>Todd McFarlane</item>
        <item>Ed McGuinness</item>
        <item>Al Milgrom</item>
        <item>Frank Miller</item>
        <item>Doug Moench</item>
        <item>Earl Norem</item>
        <item>George Perez</item>
        <item>Javier Pulido</item>
        <item>Frank Quitely</item>
        <item>Humberto Ramos</item>
        <item>Esad Ribic</item>
        <item>John Romita,Jr.</item>
        <item>Alex Ross</item>
        <item>John Severin</item>
        <item>Marie Severin</item>
        <item>Bill Sienkiewicz</item>
        <item>Marc Silvestri</item>
        <item>Walter Simonson</item>
        <item>Joe Sinnott</item>
        <item>Paul Smith</item>
        <item>Jim Starlin</item>
        <item>Jim Steranko</item>
        <item>Herb Trimpe</item>
        <item>Jim Valentino</item>
        <!--item>Boris Vallejo</item-->
        <item>Charles Vess</item>
        <item>Wade vonGrawbadger</item>
        <item>Mike Vosburg</item>
        <item>Alan Weiss</item>
        <item>Al Williamson</item>
        <item>Ron Wilson</item>
        <item>Mike Zeck</item>
    </string-array>
    <string-array name="artist_values">
        <item>249</item>
        <item>314</item>
        <item>95</item>
        <item>1836</item>
        <item>87</item>
        <item>1</item>
        <item>1216</item>
        <item>1612</item>
        <item>105</item>
        <item>1827</item>
        <item>9189</item>
        <!--item>6850</item-->
        <item>808</item>
        <item>46</item>
        <item>8018</item>
        <item>16</item>
        <item>32</item>
        <item>180</item>
        <item>248</item>
        <item>11886</item>
        <item>2695</item>
        <item>436</item>
        <item>292</item>
        <item>460</item>
        <item>1342</item>
        <item>305</item>
        <item>11521</item>
        <item>7245</item>
        <item>192</item>
        <item>570</item>
        <item>148</item>
        <item>196</item>
        <item>388</item>
        <item>425</item>
        <item>1247</item>
        <item>56</item>
        <item>96</item>
        <item>780</item>
        <item>25</item>
        <item>243</item>
        <item>75</item>
        <item>649</item>
        <item>435</item>
        <item>17</item>
        <item>223</item>
        <item>3141</item>
        <item>103</item>
        <item>2985</item>
        <item>66</item>
        <item>72</item>
        <item>182</item>
        <item>214</item>
        <item>63</item>
        <item>229</item>
        <item>198</item>
        <item>26</item>
        <item>5044</item>
        <item>5125</item>
        <item>1240</item>
        <item>431</item>
        <item>146</item>
        <item>61</item>
        <item>199</item>
        <item>1333</item>
        <!--item>1208</item-->
        <item>2042</item>
        <item>552</item>
        <item>1331</item>
        <item>1290</item>
        <item>397</item>
        <item>1219</item>
        <item>3447</item>
    </string-array>
    <string name="title_settings">Settings</string>
    <string name="character_of_the_day">Character of the Day</string>
    <string name="character_of_the_day_desc">Get a random character every day</string>

    <string name="by_character">By Character</string>
    <string name="by_character_desc">Get random comic covers involving selected characters</string>
    <string name="by_character_header">Choose Characters</string>
    <string name="choose_chars">Characters Selected: </string>

    <string name="by_artist">By Cover Artist</string>
    <string name="by_artist_desc">Get random comic covers drawn by selected artists</string>
    <string name="by_artist_header">Choose Artists</string>
    <string name="choose_artists">Artists Selected: </string>
    <string name="attribution">Data provided by Marvel. © 2014 Marvel</string>

    <string name="none">None</string>
</resources>