<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/character_of_the_day">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_input_0"
            android:summary="@string/character_of_the_day_desc"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/by_character">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_input_1"
            android:summary="@string/by_character_desc"/>
        <com.marvelmuzei.ListPreferenceMultiSelect
            android:defaultValue="0"
            android:dialogTitle="@string/by_character_header"
            android:entries="@array/character_names"
            android:entryValues="@array/character_values"
            android:key="pref_character_input"
            android:summary="@string/choose_chars"/>

        </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/by_artist">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_input_2"
            android:summary="@string/by_artist_desc"/>
        <com.marvelmuzei.ListPreferenceMultiSelect
            android:defaultValue="0"
            android:dialogTitle="@string/by_artist_header"
            android:entries="@array/artist_names"
            android:entryValues="@array/artist_values"
            android:key="pref_artist_input"
            android:summary="@string/choose_artists" />

    </PreferenceCategory>
</PreferenceScreen>